--- a/css/myCustom.css
+++ b/css/myCustom.css
@@ -7,6 +7,33 @@
 	background-image: url(../images/background.jpg);
 	height: 100vh;
 }
+.col-md-2{
+	padding-top: 30px;
+	/*border: solid 1px red;*/
+	height: 200px;
+	color: white;
+	font-size: 22pt;
+	font-family: bertica;
+	font-weight: bolder;
+}
+.col-md-10{
+	/*border: solid 1px red;*/
+	background: rgba(179,181,186,.4);
+	height: 200px;
+	padding-top: 15px;
+	color: white;
+	font-family: bertica;
+	font-size: 15pt;
+}
+.col-md-3{
+	/*border: solid 1px white;*/
+	width: 300px;
+	height: 500px;
+}
+.col-md-9{
+	/*border: solid 1px white;*/
+	height: 550px;
+}
 .col-md-4, .col-md-8{
 	/*border: solid 1px white;*/
 	
@@ -22,11 +49,17 @@
 	/*border: solid 1px white;*/
 	height: 505px;
 }
-.col-md-12{
+#social{
 	background:grey;
 	/*border: solid 1px white;*/
 	height: 50px;
 	display: inline-block;
+}
+.col-md-11{
+	border: solid 3px red;
+	margin:0 auto;
+	height: 550px;
+	overflow: scroll;
 }
 #name{
 	margin: 5px;
@@ -107,4 +140,106 @@ nav ul li:hover{
 	font-family: bertica;
 	overflow: scroll;
 	display: none;
+}
+#aboutContent{
+	padding-top: 5px;
+	border: solid 2px rgba(173,52,0,1);
+	background: grey;
+	width: 800px;
+	height: 400px;
+	text-align: center;
+	font-family: bertica;
+	font-size: 15pt;
+	color: white;
+	display: none;
+
+}
+#aboutSocial{
+	position: relative;
+	top: 40px;
+	width: 797px;
+	height:45px;
+	background: rgba(173,52,0,1);
+	text-align: left;
+}
+div span a {
+	text-decoration: none;
+	color: white;
+}
+#resumeHeader{
+	margin-left: 500px;
+	/*border: solid 1px red;*/
+	width: 100%;
+	height: 100px;
+	text-align: center;
+	color: white;
+	font-size: 25pt;
+	font-family: bertica;
+	font-weight: bolder;
+
+}
+#resumeBody{
+	/*border: solid 1px white;*/
+	height: 200px;
+}
+#resumeContent{
+	display: none;
+}
+#projectBody{
+	/*border: solid 1px white;*/
+	height: 450px;
+}
+#galleryLayout{
+	/*border: solid 1px white;*/
+	height: 225px;
+}
+#projectFooter{
+	height: 100px;
+	background: rgba(179,181,186,.4);
+	color: white;
+	text-align: center;
+	font-family: bertica;
+	font-size: 15pt;
+	font-style: italic;
+	font-weight: bolder;
+	display: none;
+}
+#contactSection{
+	/*border: solid 1px white;*/
+	height: 550px;
+	color: white;
+}
+#contactHalf1{
+    background: rgba(179,181,186,.4);
+	/*border: solid 1px white;*/
+	height: 450px;
+	font-size: 40pt;
+	font-family: bertica;
+	font-weight: bolder;
+	text-align: center;
+	color: white;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 15px;
+}
+#contactHalf2{
+	/*border: solid 1px white;*/
+	height: 450px;
+
+}
+#contactInfo{
+	
+	font-size: 20pt;
+	font-family: bertica;
+	text-align: center;
+	color: white;
+}
+#infoColor{
+	background: rgba(179,181,186,.2);
+	color: white;
+}
+#buttonPlace{
+	position: absolute;
+	right: 17px;
 }
